--- a/views/blog.ejs
+++ b/views/blog.ejs
@@ -1,3 +1,6 @@
+<!-- Header -->
+<% include ./partials/header %>
+
 <!-- Title Page -->
 <section class="bg-title-page p-t-40 p-b-50 flex-col-c-m" style="background-image: url(images/heading-pages-05.jpg);">
     <h2 class="l-text2 t-center">
@@ -492,3 +495,6 @@
         </div>
     </div>
 </section>
+
+<!-- Footer -->
+<% include ./partials/footer %>
