--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Home</title>
+	<title>Wallpaper</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 <!--===============================================================================================-->
@@ -32,6 +32,8 @@
 	<link rel="stylesheet" type="text/css" href="/vendor/lightbox2/css/lightbox.min.css">
 <!--===============================================================================================-->
 	<link rel="stylesheet" href="/css/Registration-Form-with-Photo.css">
+	<link rel="stylesheet" href="/fonts/iconicons/ionicons.min.css">
+    <link rel="stylesheet" href="/css/Login-Form-Clean.css">
 <!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="/css/util.css">
 	<link rel="stylesheet" type="text/css" href="/css/main.css">
@@ -39,25 +41,16 @@
 <!--===============================================================================================-->
 </head>
 <body class="animsition">
-	<!-- Header -->
-	<% include header %>
 	
+	<!-- Page Content -->
 	<%- body %>
 
-	<!-- Footer -->
-	<% include footer %>
-
-	<!-- Back to top -->
+	<!-- Back to top button -->
 	<div class="btn-back-to-top bg0-hov" id="myBtn">
 		<span class="symbol-btn-back-to-top">
 			<i class="fa fa-angle-double-up" aria-hidden="true"></i>
 		</span>
 	</div>
-
-	<!-- Container Selection1 -->
-	<div id="dropDownSelect1"></div>
-
-<!--===============================================================================================-->
 
 
 <!--===============================================================================================-->
