--- a/views/products.ejs
+++ b/views/products.ejs
@@ -1,3 +1,6 @@
+<!-- Header -->
+<% include ./partials/header %>
+
 <!-- Title Page -->
 <section class="bg-title-page p-t-50 p-b-40 flex-col-c-m" style="background-image: url(../images/heading-pages-02.jpg);">
     <h2 class="l-text2 t-center">
@@ -580,3 +583,6 @@
         </div>
     </div>
 </section>
+
+<!-- Footer -->
+<% include ./partials/footer %>
