--- a/views/login.ejs
+++ b/views/login.ejs
@@ -5,36 +5,29 @@
       <% include ./partials/messages %>
       <form action="/users/login" method="POST">
         <div class="form-group">
-          <label for="email">Email</label>
           <input
             type="email"
             id="email"
             name="email"
             class="form-control"
-            placeholder="Enter Email"
+            placeholder="Email"
           />
         </div>
         <div class="form-group">
-          <label for="password">Password</label>
           <input
             type="password"
             id="password"
             name="password"
             class="form-control"
-            placeholder="Enter Password"
+            placeholder="Password"
           />
         </div>
         <button type="submit" class="btn btn-primary btn-block">Login</button>
       </form>
       <p class="lead mt-4">
-        Don't you have an account? <a href="/users/register">Register</a>
+        Don't you have an account? <a href="/users/register">Register Now!</a>
       </p>
     </div>
   </div>
 </div>
-
-
-
-
-
-      
+    
