--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1107,7 +1107,7 @@ li.sale-noti > a {
 
 .side-menu .sub-menu > li {
   padding-left: 12px;
-  padding-top: 
+  padding-top: 12px;
 }
 
 .side-menu .sub-menu a:hover {
@@ -2345,5 +2345,3 @@ input.num-product::-webkit-inner-spin-button {
     -webkit-appearance: none;
     margin: 0; 
 }
-
-
