--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -1,3 +1,237 @@
-Hello there! 
-
-Welcome to dashboard.
+<div id="wrapper">
+    <div id="sidebar-wrapper">
+        <div class="sidebar-nav">
+            <a href="#" class="sidebar-brand">Home </a>
+            <a href="/admin">Dashboard </a>
+            <button class="dropdown-btn">Product
+                <i class="fa fa-caret-down"></i>
+            </button>
+            <div class="dropdown-container">
+                <a href="/admin/addProduct">Add Product </a>
+                <a href="/admin/editProduct">Edit Product </a>
+                <a href="/admin/viewProducts">View Product </a>
+            </div>
+            <button class="dropdown-btn">Billing
+                <i class="fa fa-caret-down"></i>
+            </button>
+            <div class="dropdown-container">
+                <a href="/admin/addBill">Add Bill </a>
+                <a href="/admin/editBill">Edit Bill </a>
+                <a href="/admin/viewBill">View Bill </a>
+            </div>
+            <button class="dropdown-btn">Customers
+                <i class="fa fa-caret-down"></i>
+            </button>
+            <div class="dropdown-container">
+                <a href="/admin/addCustomer">Add Customer </a>
+                <a href="/admin/editCustomer">Edit Customer </a>
+                <a href="/admin/viewCustomer">View Customer </a>
+            </div>
+            <button class="dropdown-btn">Vendors
+                <i class="fa fa-caret-down"></i>
+            </button>
+            <div class="dropdown-container">
+                <a href="/admin/addVendor">Add Vendor </a>
+                <a href="/admin/editVendor">Edit Vendor </a>
+                <a href="/admin/viewVendor">View Vendor </a>
+            </div>
+            <button class="dropdown-btn">Orders
+                <i class="fa fa-caret-down"></i>
+            </button>
+            <div class="dropdown-container">
+                <a href="/admin/addOrder">Add Order </a>
+                <a href="/admin/editOrder">Edit Order </a>
+                <a href="/admin/viewOrder">View Order </a>
+            </div>
+            <button class="dropdown-btn">Users
+                <i class="fa fa-caret-down"></i>
+            </button>
+            <div class="dropdown-container">
+                <a href="/admin/addUser">Add User </a>
+                <a href="/admin/editUser">Edit User </a>
+                <a href="/admin/viewUser">View User </a>
+            </div>
+            
+            <a href="#">Messaging </a>
+            
+            <button class="dropdown-btn">Reports
+                <i class="fa fa-caret-down"></i>
+            </button>
+            <div class="dropdown-container">
+                <a href="/admin/addReport">Add Report </a>
+                <a href="/admin/editReport">Edit Report </a>
+                <a href="/admin/viewReport">View Report </a>
+            </div>
+            
+            <button class="dropdown-btn">Categories
+                <i class="fa fa-caret-down"></i>
+            </button>
+            <div class="dropdown-container">
+                <a href="/admin/addCategory">Add Category </a>
+                <a href="/admin/editCategory">Edit Category </a>
+                <a href="/admin/viewCategory">View Category </a>
+            </div>
+        </div>
+    </div>
+    <div class="page-content-wrapper">
+        <header class="container-fluid">
+            <a class="btn btn-link" role="button" href="#menu-toggle" id="menu-toggle">
+                <i class="fa fa-bars"></i>
+            </a>
+        </header>
+        
+        <div class="container-fluid">
+            <div class="row justify-content-md-center">
+                <div class="col-lg-10 col-md-10 col-sm-12" style="border-style: ridge">
+                    <div class="block">
+                        <div class="block-title">
+                            <h2>
+                                <i class="fa fa-plus"></i>
+                                <strong> Add </strong> New Product
+                            </h2>
+                        </div>
+                        <div class="block-form">
+                            <% include ./partials/messages %>
+                            <form action="/admin/addProduct" method="post" enctype="multipart/form-data">
+                                <div class="form-group">
+                                    <label class="col-md-4 control-label" for="sku"><b>SKU</b></label>
+                                    <div class="col-md-9">
+                                        <input 
+                                            class="form-control text-box"
+                                            type="text"
+                                            id="sku"
+                                            name="sku"
+                                            placeholder="Enter sku..."
+                                        />
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <label class="col-md-4 control-label" for="name"><b>Product Name</b></label>
+                                    <div class="col-md-9">
+                                        <input 
+                                            class="form-control text-box"
+                                            type="text"
+                                            id="name"
+                                            name="name"
+                                            placeholder="Enter product name..."
+                                        />
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <label class="col-md-4 control-label" for="description"><b>Description</b></label>
+                                    <div class="col-md-9">
+                                        <input 
+                                            class="form-control text-box"
+                                            type="textarea"
+                                            id="description"
+                                            name="description"
+                                            placeholder="Enter product description..."
+                                            style="height:150px"
+                                        />
+                                    </div>
+                                </div>
+                                
+                                <div class="form-group">
+                                    <label class="col-md-4 control-label" for="categories"><b>Categories</b></label>
+                                    <div class="col-md-9">
+                                        <select class="select-chosen text-box" id="categories" name="categories" data-placeholder="Choose category...">
+                                            <option></option>
+                                            <option value="category1">Category 1</option>
+                                            <option value="category2">Category 2</option>
+                                            <option value="category3">Category 3</option>
+                                            <option value="category4">Category 4</option>
+                                        </select>
+                                    </div>
+                                </div>
+                                
+                                <div class="form-group">
+                                    <label class="col-md-4 control-label" for="tag"><b>Tags</b></label>
+                                    <div class="col-md-9">
+                                        <input 
+                                            class="form-control text-box"
+                                            type="text"
+                                            id="tag"
+                                            name="tag[]"
+                                            placeholder="Examples: clothes, shirt..."
+                                        />
+                                    </div>
+                                </div>
+                                
+                                <div class="form-group">
+                                    <label class="col-md-4 control-label" for="quantity"><b>Quantity</b></label>
+                                    <div class="col-md-9">
+                                        <input 
+                                            class="form-control text-box"
+                                            type="number"
+                                            id="quantity"
+                                            name="quantity"
+                                            placeholder="Enter the number of products"
+                                        />
+                                    </div>
+                                </div>
+                                
+                                <div class="form-group">
+                                    <input 
+                                        class="form-group"
+                                        type="hidden"
+                                        id="status"
+                                        name="status"
+                                        value="available"
+                                    />
+                                </div>
+                                
+                                <div class="form-group">
+                                    <label class="col-md-4 control-label" for="regularPrice"><b>Regular Price</b></label>
+                                    <div class="col-md-9">
+                                        <i class="fa fa-usd"></i>
+                                        <input 
+                                            class="form-control text-box"
+                                            type="number"
+                                            id="regularPrice"
+                                            name="regularPrice"
+                                            placeholder="0.000"
+                                        />
+                                    </div>
+                                </div>
+                                
+                                <div class="form-group">
+                                    <label class="col-md-4 control-label" for="discountPrice"><b>Discount Price</b></label>
+                                    <div class="col-md-9">
+                                        <i class="fa fa-usd"></i>
+                                        <input 
+                                            class="form-control text-box"
+                                            type="number"
+                                            id="discountPrice"
+                                            name="discountPrice"
+                                            placeholder="0.000"
+                                        />
+                                    </div>
+                                </div>
+                                
+                                <div class="form-group">
+                                    <label class="col-md-4 control-label" for="discountPrice"><i class="fa fa-picture-o"></i><b>Upload Product Images</b></label>
+                                    <div class="col-md-9">
+                                        <input type="file" name="file[]" id="file" class="form-control file"multiple>
+                                    </div>
+                                </div>
+                                
+                                <div class="form-group">
+                                    <button type="submit" class="btn btn-sm btn-primary">
+                                        <i class="fa fa-floppy-o"></i>
+                                        Save
+                                    </button>
+                                    <button type="reset" class="btn btn-sm btn-warning">
+                                        <i class="fa fa-repeat"></i>
+                                        Reset
+                                    </button>
+                                </div>
+                                
+                                
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
