--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -38,6 +38,10 @@
 	<link rel="stylesheet" type="text/css" href="/css/util.css">
 	<link rel="stylesheet" type="text/css" href="/css/main.css">
 	
+<!--==============================ADMIN=================================================================-->
+	<link rel="stylesheet" type="text/css" href="/css/Sidebar-Menu-1.css">
+    <link rel="stylesheet" type="text/css" href="/css/Sidebar-Menu.css">
+    <link rel="stylesheet" type="text/css" href="/css/style.css">
 <!--===============================================================================================-->
 </head>
 <body class="animsition">
@@ -94,7 +98,7 @@
 	</script>
 
 <!--===============================================================================================-->
-	<script src="/js/main.js"></script>
-	
+	<script type="text/javascript" src="/js/main.js"></script>
+	<script type="text/javascript" src="/js/Sidebar-Menu.js"></script>
 </body>
 </html>
