--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -79,159 +79,8 @@
                 <i class="fa fa-bars"></i>
             </a>
         </header>
+
+        <% include ./admin/productForm %>
         
-        <div class="container-fluid">
-            <div class="row justify-content-md-center">
-                <div class="col-lg-10 col-md-10 col-sm-12" style="border-style: ridge">
-                    <div class="block">
-                        <div class="block-title">
-                            <h2>
-                                <i class="fa fa-plus"></i>
-                                <strong> Add </strong> New Product
-                            </h2>
-                        </div>
-                        <div class="block-form">
-                            <% include ./partials/messages %>
-                            <form action="/admin/addProduct" method="post" enctype="multipart/form-data">
-                                <div class="form-group">
-                                    <label class="col-md-4 control-label" for="sku"><b>SKU</b></label>
-                                    <div class="col-md-9">
-                                        <input 
-                                            class="form-control text-box"
-                                            type="text"
-                                            id="sku"
-                                            name="sku"
-                                            placeholder="Enter sku..."
-                                        />
-                                    </div>
-                                </div>
-                                <div class="form-group">
-                                    <label class="col-md-4 control-label" for="name"><b>Product Name</b></label>
-                                    <div class="col-md-9">
-                                        <input 
-                                            class="form-control text-box"
-                                            type="text"
-                                            id="name"
-                                            name="name"
-                                            placeholder="Enter product name..."
-                                        />
-                                    </div>
-                                </div>
-                                <div class="form-group">
-                                    <label class="col-md-4 control-label" for="description"><b>Description</b></label>
-                                    <div class="col-md-9">
-                                        <input 
-                                            class="form-control text-box"
-                                            type="textarea"
-                                            id="description"
-                                            name="description"
-                                            placeholder="Enter product description..."
-                                            style="height:150px"
-                                        />
-                                    </div>
-                                </div>
-                                
-                                <div class="form-group">
-                                    <label class="col-md-4 control-label" for="categories"><b>Categories</b></label>
-                                    <div class="col-md-9">
-                                        <select class="select-chosen text-box" id="categories" name="categories" data-placeholder="Choose category...">
-                                            <option></option>
-                                            <option value="category1">Category 1</option>
-                                            <option value="category2">Category 2</option>
-                                            <option value="category3">Category 3</option>
-                                            <option value="category4">Category 4</option>
-                                        </select>
-                                    </div>
-                                </div>
-                                
-                                <div class="form-group">
-                                    <label class="col-md-4 control-label" for="tag"><b>Tags</b></label>
-                                    <div class="col-md-9">
-                                        <input 
-                                            class="form-control text-box"
-                                            type="text"
-                                            id="tag"
-                                            name="tag[]"
-                                            placeholder="Examples: clothes, shirt..."
-                                        />
-                                    </div>
-                                </div>
-                                
-                                <div class="form-group">
-                                    <label class="col-md-4 control-label" for="quantity"><b>Quantity</b></label>
-                                    <div class="col-md-9">
-                                        <input 
-                                            class="form-control text-box"
-                                            type="number"
-                                            id="quantity"
-                                            name="quantity"
-                                            placeholder="Enter the number of products"
-                                        />
-                                    </div>
-                                </div>
-                                
-                                <div class="form-group">
-                                    <input 
-                                        class="form-group"
-                                        type="hidden"
-                                        id="status"
-                                        name="status"
-                                        value="available"
-                                    />
-                                </div>
-                                
-                                <div class="form-group">
-                                    <label class="col-md-4 control-label" for="regularPrice"><b>Regular Price</b></label>
-                                    <div class="col-md-9">
-                                        <i class="fa fa-usd"></i>
-                                        <input 
-                                            class="form-control text-box"
-                                            type="number"
-                                            id="regularPrice"
-                                            name="regularPrice"
-                                            placeholder="0.000"
-                                        />
-                                    </div>
-                                </div>
-                                
-                                <div class="form-group">
-                                    <label class="col-md-4 control-label" for="discountPrice"><b>Discount Price</b></label>
-                                    <div class="col-md-9">
-                                        <i class="fa fa-usd"></i>
-                                        <input 
-                                            class="form-control text-box"
-                                            type="number"
-                                            id="discountPrice"
-                                            name="discountPrice"
-                                            placeholder="0.000"
-                                        />
-                                    </div>
-                                </div>
-                                
-                                <div class="form-group">
-                                    <label class="col-md-4 control-label" for="discountPrice"><i class="fa fa-picture-o"></i><b>Upload Product Images</b></label>
-                                    <div class="col-md-9">
-                                        <input type="file" name="file[]" id="file" class="form-control file"multiple>
-                                    </div>
-                                </div>
-                                
-                                <div class="form-group">
-                                    <button type="submit" class="btn btn-sm btn-primary">
-                                        <i class="fa fa-floppy-o"></i>
-                                        Save
-                                    </button>
-                                    <button type="reset" class="btn btn-sm btn-warning">
-                                        <i class="fa fa-repeat"></i>
-                                        Reset
-                                    </button>
-                                </div>
-                                
-                                
-                            </form>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
     </div>
 </div>
