--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -31,9 +31,8 @@
 <!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="/vendor/lightbox2/css/lightbox.min.css">
 <!--===============================================================================================-->
-	<link rel="stylesheet" href="/css/Registration-Form-with-Photo.css">
-	<link rel="stylesheet" href="/fonts/iconicons/ionicons.min.css">
-    <link rel="stylesheet" href="/css/Login-Form-Clean.css">
+	<link rel="stylesheet" type="text/css" href="/css/Registration-Form-with-Photo.css">
+	<link rel="stylesheet" type="text/css" href="/fonts/iconicons-2.0.1/css/ionicons.min.css">
 <!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="/css/util.css">
 	<link rel="stylesheet" type="text/css" href="/css/main.css">
