--- a/views/admin/productForm.ejs
+++ b/views/admin/productForm.ejs
@@ -10,7 +10,7 @@
                 </div>
                 <div class="block-form">
                     <% include ../partials/messages %>
-                    <form action="/admin/addProduct" method="post" enctype="multipart/form-data">
+                    <form action="/admin/addProduct" method="post">
                         <div class="form-group">
                             <label class="col-md-auto control-label" for="sku"><b>SKU</b></label>
                             <div class="col-md-auto">
@@ -32,7 +32,7 @@
                                     id="name"
                                     name="name"
                                     placeholder="Enter product name..."
-                                />
+                                    />
                             </div>
                         </div>
                         <div class="form-group">
@@ -40,7 +40,7 @@
                             <div class="col-md-auto">
                                 <input 
                                     class="form-control text-box"
-                                    type="textarea"
+                                    type="text"
                                     id="description"
                                     name="description"
                                     placeholder="Enter product description..."
@@ -52,8 +52,7 @@
                         <div class="form-group">
                             <label class="col-md-auto control-label" for="categories"><b>Categories</b></label>
                             <div class="col-md-auto">
-                                <select class="select-chosen text-box" id="categories" name="categories" data-placeholder="Choose category...">
-                                    <option></option>
+                                <select class="select-chosen text-box" id="categories" name="categories[]" data-role="tagsinput" multiple>
                                     <option value="category1">Category 1</option>
                                     <option value="category2">Category 2</option>
                                     <option value="category3">Category 3</option>
@@ -63,13 +62,13 @@
                         </div>
                         
                         <div class="form-group">
-                            <label class="col-md-auto control-label" for="tag"><b>Tags</b></label>
+                            <label class="col-md-auto control-label" for="tags"><b>Tags</b></label>
                             <div class="col-md-auto">
                                 <input 
                                     class="form-control text-box"
                                     type="text"
-                                    id="tag"
-                                    name="tag[]"
+                                    id="tags"
+                                    name="tags"
                                     placeholder="Examples: clothes, shirt..."
                                 />
                             </div>
@@ -86,16 +85,6 @@
                                     placeholder="Enter the number of products"
                                 />
                             </div>
-                        </div>
-                        
-                        <div class="form-group">
-                            <input 
-                                class="form-group"
-                                type="hidden"
-                                id="status"
-                                name="status"
-                                value="available"
-                            />
                         </div>
                         
                         <div class="form-group">
@@ -127,9 +116,14 @@
                         </div>
                         
                         <div class="form-group">
-                            <label class="col-md-auto control-label" for="discountPrice"><i class="fa fa-picture-o"></i><b>Upload Product Images</b></label>
+                            <label class="col-md-auto control-label" for="file"><i class="fa fa-picture-o"></i><b>Upload Product Images</b></label>
                             <div class="col-md-auto">
-                                <input type="file" name="file[]" id="file" class="form-control text-box"multiple>
+                                <input 
+                                type="file" 
+                                name="file[]" 
+                                id="file" 
+                                class="form-control text-box" 
+                                multiple>
                             </div>
                         </div>
                         
