--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -71,6 +71,10 @@
                 <a href="/admin/editCategory">Edit Category </a>
                 <a href="/admin/viewCategory">View Category </a>
             </div>
+
+            <a href="/users/logout">
+                <i class="fa fa-power-off"></i> Log Out</a>
+
         </div>
     </div>
     <div class="page-content-wrapper">
