add view products

--- a/views/admin/sidebar-wrapper.ejs
+++ b/views/admin/sidebar-wrapper.ejs
@@ -6,9 +6,9 @@
             <i class="fa fa-caret-down"></i>
         </button>
         <div class="dropdown-container">
-            <a href="/admin/addProduct">Add Product </a>
-            <a href="/admin/editProduct">Edit Product </a>
-            <a href="/admin/viewProducts">View Product </a>
+            <a href="/admin/product/addProduct">Add Product </a>
+            <a href="/admin/product/editProduct">Edit Product </a>
+            <a href="/admin/product/viewProducts">View Product </a>
         </div>
         <button class="dropdown-btn"><i class="fa fa-money"></i> Billing
             <i class="fa fa-caret-down"></i>
@@ -52,8 +52,10 @@
         </div>
         
         <a href="#"><i class="fa fa-envelope"></i> Messaging </a>
+
+        <a href="#"><i class="fa fa-bar-chart-o"></i> Statistic </a>
         
-        <button class="dropdown-btn"><i class="fa fa-bar-chart-o"></i> Statistic
+        <!-- <button class="dropdown-btn"><i class="fa fa-bar-chart-o"></i> Statistic
             <i class="fa fa-caret-down"></i>
         </button>
         <div class="dropdown-container">
@@ -61,7 +63,7 @@
             <a href="/admin/editReport">Edit Report </a>
             <a href="/admin/viewReport">View Report </a>
         </div>
-        
+         -->
         <button class="dropdown-btn"><i class="fas fa-shapes"></i> Categories
             <i class="fa fa-caret-down"></i>
         </button>
