--- a/views/admin/productForm.ejs
+++ b/views/admin/productForm.ejs
@@ -22,7 +22,7 @@
                         </div>
                         <div class="block-form">
                             <% include ../partials/messages %>
-                            <form action="/admin/addProduct" method="post" enctype="multipart/form-data">
+                            <form action="/admin/product/addProduct" method="post" enctype="multipart/form-data">
                                 <div class="form-group">
                                     <label class="col-md-auto control-label" for="sku"><b>SKU</b></label>
                                     <div class="col-md-auto">
@@ -100,9 +100,10 @@
                                 </div>
                                 
                                 <div class="form-group">
-                                    <label class="col-md-auto control-label" for="regularPrice"><b>Regular Price</b></label>
+                                    <label class="col-md-auto control-label" for="regularPrice">
+                                        <i class="fa fa-usd"></i> <b>Regular Price</b>
+                                    </label>
                                     <div class="col-md-auto">
-                                        <i class="fa fa-usd"></i>
                                         <input 
                                             class="form-control text-box"
                                             type="number"
@@ -114,9 +115,10 @@
                                 </div>
                                 
                                 <div class="form-group">
-                                    <label class="col-md-auto control-label" for="discountPrice"><b>Discount Price</b></label>
+                                    <label class="col-md-auto control-label" for="discountPrice">
+                                        <i class="fa fa-usd"></i> <b>Discount Price</b>
+                                    </label>
                                     <div class="col-md-auto">
-                                        <i class="fa fa-usd"></i>
                                         <input 
                                         class="form-control text-box"
                                         type="number"
