--- a/views/admin/productReport.ejs
+++ b/views/admin/productReport.ejs
@@ -2,7 +2,7 @@
     <div class="row justify-content-center">
         <div class="col-lg-3 col-md-8 col-sm-12 mx-4 my-5">
             <div class="card text-center">
-                <h4 class="card-header">Total Products</h4>
+                <h4 class="card-header bg-primary">Total Products</h4>
                 <div class="card-body">
                     <h5 class="card-title"><%= total %></h5>
                 </div>
@@ -11,7 +11,7 @@
 
         <div class="col-lg-3 col-md-8 col-sm-12 mx-4 my-5">
             <div class="card text-center">
-                <h4 class="card-header">On Stock</h4>
+                <h4 class="card-header bg-success">On Stock</h4>
                 <div class="card-body">
                     <h5 class="card-title"><%= onStock %></h5>
                 </div>
@@ -20,7 +20,7 @@
         
         <div class="col-lg-3 col-md-8 col-sm-12 mx-4 my-5">
             <div class="card text-center">
-                <h4 class="card-header">Out of Stock</h4>
+                <h4 class="card-header bg-danger">Out of Stock</h4>
                 <div class="card-body">
                     <h5 class="card-title"><%= outOfStock %></h5>
                 </div>
