--- a/views/admin/header.ejs
+++ b/views/admin/header.ejs
@@ -1,5 +1,13 @@
 <header class="container-fluid">
+    <a class="btn btn-light" role="button" href="#">
+        <img src="/images/icons/logo.png" alt="image" class="rounded">
+    </a>
+    
     <a class="btn btn-light" role="button" href="#menu-toggle" id="menu-toggle">
         <i class="fa fa-bars"></i>
+    </a>
+    
+    <a class="btn btn-light float-right" role="button">
+        <i class="fas fa-cog"></i>
     </a>
 </header>
