--- a/views/admin/productReport.ejs
+++ b/views/admin/productReport.ejs
@@ -1,28 +1,50 @@
 <div class="container-fluid">
     <div class="row justify-content-center">
-        <div class="col-lg-3 col-md-8 col-sm-12 mx-4 my-5">
+
+        <div class="col-lg-2 col-md-3 col-sm-10 mx-3 my-5">
             <div class="card text-center">
-                <h4 class="card-header bg-primary">Total Products</h4>
+                <a href="/admin/product">
+                    <h4 class="card-header bg-light">View Product</h4>
+                    <div class="card-body">
+                        <h5 class="card-title"><i class="fas fa-eye"></i></h5>
+                    </div>
+                </a>
+            </div>
+        </div>
+        <div class="col-lg-2 col-md-3 col-sm-10 mx-3 my-5">
+            <div class="card text-center">
+                <a href="/admin/product/addProduct">
+                    <h4 class="card-header bg-success">Add Product</h4>
+                    <div class="card-body">
+                        <h5 class="card-title"><i class="fas fa-plus"></i></h5>
+                    </div>
+                </a>
+            </div>
+        </div>
+
+        <div class="col-lg-2 col-md-3 col-sm-10 mx-3 my-5">
+            <div class="card text-center">
+                <h4 class="card-header bg-danger">Out of Stock</h4>
                 <div class="card-body">
-                    <h5 class="card-title"><%= total %></h5>
+                    <h5 class="card-title"><%= outOfStock %></h5>
                 </div>
             </div>
         </div>
 
-        <div class="col-lg-3 col-md-8 col-sm-12 mx-4 my-5">
+        <div class="col-lg-2 col-md-3 col-sm-10 mx-3 my-5">
             <div class="card text-center">
-                <h4 class="card-header bg-success">On Stock</h4>
+                <h4 class="card-header bg-info">On Stock</h4>
                 <div class="card-body">
                     <h5 class="card-title"><%= onStock %></h5>
                 </div>
             </div>
         </div>
-        
-        <div class="col-lg-3 col-md-8 col-sm-12 mx-4 my-5">
+
+        <div class="col-lg-2 col-md-3 col-sm-10 mx-3 my-5">
             <div class="card text-center">
-                <h4 class="card-header bg-danger">Out of Stock</h4>
+                <h4 class="card-header bg-secondary">All Products</h4>
                 <div class="card-body">
-                    <h5 class="card-title"><%= outOfStock %></h5>
+                    <h5 class="card-title"><%= total %></h5>
                 </div>
             </div>
         </div>
