--- a/views/admin/editProduct.ejs
+++ b/views/admin/editProduct.ejs
@@ -6,6 +6,8 @@
         
         <% include ./header %>
         
+        <% include ./productReport %>
+
         <!-- Add product form -->
         <div class="container-fluid">
             <div class="row justify-content-center">
@@ -30,7 +32,7 @@
                                             id="sku"
                                             name="sku"
                                             placeholder="Enter sku..."
-                                            value= <%- product.sku -%>
+                                            value= "<%- product.sku -%>"
                                         />
                                     </div>
                                 </div>
@@ -43,7 +45,7 @@
                                             id="name"
                                             name="name"
                                             placeholder="Enter product name..."
-                                            value= <%- product.name -%>
+                                            value= "<%- product.name -%>"
                                             />
                                     </div>
                                 </div>
@@ -57,7 +59,9 @@
                                             name="description"
                                             placeholder="Enter product description..."
                                             rows="5"
-                                        ><%- product.sku -%></textarea>
+                                            value= "<%- product.description -%>"
+                                        >
+                                    </textarea>
                                     </div>
                                 </div>
                                 
@@ -82,7 +86,7 @@
                                             id="tags"
                                             name="tags"
                                             placeholder="Examples: clothes, shirt..."
-                                            value= <%- product.tags -%>
+                                            value= "<%- product.tags -%>"
                                         />
                                     </div>
                                 </div>
@@ -96,7 +100,7 @@
                                             id="quantity"
                                             name="quantity"
                                             placeholder="Enter the number of products"
-                                            value= <%- product.quantity -%>
+                                            value= "<%- product.quantity -%>"
                                         />
                                     </div>
                                 </div>
@@ -112,7 +116,7 @@
                                             id="regularPrice"
                                             name="regularPrice"
                                             placeholder="0.000"
-                                            value= <%- product.regularPrice -%>
+                                            value= "<%- product.regularPrice -%>"
                                         />
                                     </div>
                                 </div>
@@ -128,7 +132,7 @@
                                         id="discountPrice"
                                         name="discountPrice"
                                         placeholder="0.000"
-                                        value= <%- product.discountPrice -%>
+                                        value= "<%- product.discountPrice -%>"
                                         />
                                     </div>
                                 </div>
