--- a/views/admin/sidebar-wrapper.ejs
+++ b/views/admin/sidebar-wrapper.ejs
@@ -41,9 +41,9 @@
             <i class="fa fa-caret-down"></i>
         </button>
         <div class="dropdown-container">
-            <a href="/admin/addUser">Add User </a>
-            <a href="/admin/editUser">Edit User </a>
-            <a href="/admin/viewUser">View User </a>
+            <a href="/admin/users/addUser">Add User </a>
+            <a href="/admin/users/editUser">Edit User </a>
+            <a href="/admin/users/viewUser">View User </a>
         </div>
         
         <a href="#"><i class="fa fa-envelope"></i> Messaging </a>
