--- a/views/admin/viewUser.ejs
+++ b/views/admin/viewUser.ejs
@@ -23,7 +23,7 @@
                         <% doc.forEach(function(doc) { %>
                             <tr class="mw-100 p-3">
                                 <td class="h-50 mx-auto my-auto">
-                                    <img src='/images/uploads/1547227742454-banner-01.jpg' alt="Image" class="img-fluid img-thumbnail rounded" width="100px"/>
+                                    <img src="<%= doc.imageUrl %>" alt="Image" class="img-fluid img-thumbnail rounded" width="100px"/>
                                 </td>
                                 <td><%= doc.name %></td>
                                 <td><%= doc.email %></td>
