--- a/views/admin/sidebar-wrapper.ejs
+++ b/views/admin/sidebar-wrapper.ejs
@@ -14,23 +14,9 @@
         
         <a href="/admin/product"><i class="fas fa-box-open"></i> Product </a>
         
-        <button class="dropdown-btn"><i class="fas fa-shapes"></i> Categories
-            <i class="fa fa-caret-down"></i>
-        </button>
-        <div class="dropdown-container">
-            <a href="/admin/addCategory">Add Category </a>
-            <a href="/admin/editCategory">Edit Category </a>
-            <a href="/admin/viewCategory">View Category </a>
-        </div>
+        <a href="/admin/categories"><i class="fas fa-shapes"></i> Categories </a>
 
-        <button class="dropdown-btn"><i class="fa fa-tags"></i> Tags
-            <i class="fa fa-caret-down"></i>
-        </button>
-        <div class="dropdown-container">
-            <a href="/admin/addTag">Add Tag </a>
-            <a href="/admin/editTag">Edit Tag </a>
-            <a href="/admin/viewTags">View Tag </a>
-        </div>
+        <a href="/admin/tags"><i class="fa fa-tags"></i> Tags </a>
 
         <button class="dropdown-btn"><i class="fa fa-money"></i> Billing
             <i class="fa fa-caret-down"></i>
