--- a/views/admin/viewProduct.ejs
+++ b/views/admin/viewProduct.ejs
@@ -10,55 +10,53 @@
         
         <!-- Add product form -->
         <div class="container-fluid table-responsive">
-            <table class="table table-light table-striped table-bordered mx-8 my-8">
+            <table class="table table-light table-striped table-bordered table-sm mx-8 my-8">
                 <thead>
                     <tr>
-                        <th scope="col">SKU</th>
-                        <th scope="col">Image</th>
-                        <th scope="col">Name</th>
-                        <th scope="col">Reg. Price</th>
-                        <th scope="col">Dis. Price</th>
-                        <th scope="col">Quantity</th>
-                        <th scope="col">Status</th>
-                        <th scope="col">Categories</th>
-                        <th scope="col">Tags</th>
-                        <th scope="col">Added On</th>
-                        <th scope="col">Action</th>
+                        <th class="th-sm" id="sku" scope="col">SKU</th>
+                        <th class="th-sm" id="image" scope="col">Image</th>
+                        <th class="th-sm" id="name" scope="col">Name</th>
+                        <th class="th-sm" id="regPrice" scope="col">Reg. Price</th>
+                        <th class="th-sm" id="disPrice" scope="col">Dis. Price</th>
+                        <th class="th-sm" id="quantity" scope="col">Quantity</th>
+                        <th class="th-sm" id="status" scope="col">Status</th>
+                        <th class="th-sm" scope="col">Categories</th>
+                        <th class="th-sm" scope="col">Tags</th>
+                        <th class="th-sm" id="createdOn" scope="col">Added On</th>
+                        <th class="th-sm" scope="col">Action</th>
                     </tr>
-
-                    <tbody>
-                        <% data.forEach(function(data) { %>
-                            <tr class="mw-100 p-3">
-                                <td><%= data.sku %></td>
-                                <td class="h-50 mx-auto my-auto">
-                                    <img src='/images/uploads/1547227742454-banner-01.jpg' alt="Image" class="img-fluid img-thumbnail rounded" width="100px"/>
-                                    <!-- <img src='<%= data.imageUrl[0] %>' alt="Image" class="img-fluid img-thumbnail rounded"/> -->
-                                </td>
-                                <td><%= data.name %></td>
-                                <td><%= data.regularPrice %></td>
-                                <td><%= data.discountPrice %></td>
-                                <td><%= data.quantity %></td>
-                                <% if(data.status){ %>
-                                    <td><span class="label label-success">Available</span></td>
-                                <% } else { %>
-                                    <td><span class="label label-danger">Out of Stock</span></td>
-                                <% } %>
-                                <td><%= data.categories %></td>
-                                <td><%= data.tags %></td>
-                                <td><%= data.createdOn.toDateString() %></td>
-                                <td>
-                                    <a data-toggle="tooltip" data-placement="top" title="Edit" href="<%= link + data.sku %>" >
-                                        <i class="fas fa-edit"></i>
-                                    </a>
-                                    <a data-toggle="tooltip" data-placement="top" title="Delete" href="<%= link + data.sku + '?_method=DELETE' %>" onclick="return confirm('Are you sure?')">
-                                        <i class="fas fa-trash-alt" style="color:red"></i>
-                                    </a> 
-                                </td>
-                            </tr>
-                        <% }); %>
-                    </tbody>
-
                 </thead>
+                <tbody>
+                    <% data.forEach(function(data) { %>
+                    <tr class="mw-100 p-3">
+                        <td><%= data.sku %></td>
+                        <td class="h-50 mx-auto my-auto">
+                            <img src='/images/uploads/1547227742454-banner-01.jpg' alt="Image" class="img-fluid img-thumbnail rounded" width="100px"/>
+                            <!-- <img src='<%= data.imageUrl[0] %>' alt="Image" class="img-fluid img-thumbnail rounded"/> -->
+                        </td>
+                        <td><%= data.name %></td>
+                        <td><%= data.regularPrice %></td>
+                        <td><%= data.discountPrice %></td>
+                        <td><%= data.quantity %></td>
+                        <% if(data.status){ %>
+                            <td><span class="label label-success">Available</span></td>
+                        <% } else { %>
+                            <td><span class="label label-danger">Out of Stock</span></td>
+                        <% } %>
+                        <td><%= data.categories %></td>
+                        <td><%= data.tags %></td>
+                        <td><%= data.createdOn.toDateString() %></td>
+                        <td>
+                            <a data-toggle="tooltip" data-placement="top" title="Edit" href="<%= link + data.sku %>" >
+                                <i class="fas fa-edit"></i>
+                            </a>
+                            <a data-toggle="tooltip" data-placement="top" title="Delete" href="<%= link + data.sku + '?_method=DELETE' %>" onclick="return confirm('Are you sure?')">
+                                <i class="fas fa-trash-alt" style="color:red"></i>
+                            </a> 
+                        </td>
+                    </tr>
+                    <% }); %>
+                </tbody>
             </table>
         </div>
         
