--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -15,6 +15,8 @@
 							crossorigin="anonymous">
 <!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="/fonts/themify/themify-icons.css">
+	<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="/fonts/ionicons-2.0.1/css/ionicons.min.css">
 <!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="/fonts/Linearicons-Free-v1.0.0/icon-font.min.css">
 <!--===============================================================================================-->
@@ -35,7 +37,6 @@
 	<link rel="stylesheet" type="text/css" href="/vendor/lightbox2/css/lightbox.min.css">
 <!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="/css/Registration-Form-with-Photo.css">
-	<link rel="stylesheet" type="text/css" href="/fonts/iconicons-2.0.1/css/ionicons.min.css">
 <!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="/css/util.css">
 	<link rel="stylesheet" type="text/css" href="/css/main.css">
