--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -11,11 +11,11 @@
                 </p>
 
                 <div class="flex-m p-t-30">
-                    <a href="#" class="fs-18 color1 p-r-20 fa fa-facebook"></a>
-                    <a href="#" class="fs-18 color1 p-r-20 fa fa-instagram"></a>
-                    <a href="#" class="fs-18 color1 p-r-20 fa fa-pinterest-p"></a>
-                    <a href="#" class="fs-18 color1 p-r-20 fa fa-snapchat-ghost"></a>
-                    <a href="#" class="fs-18 color1 p-r-20 fa fa-youtube-play"></a>
+                    <a href="#" class="fs-18 color1 p-r-20 fab fa-facebook"></a>
+                    <a href="#" class="fs-18 color1 p-r-20 fab fa-instagram"></a>
+                    <a href="#" class="fs-18 color1 p-r-20 fab fa-pinterest"></a>
+                    <a href="#" class="fs-18 color1 p-r-20 fab fa-snapchat-ghost"></a>
+                    <a href="#" class="fs-18 color1 p-r-20 fab fa-youtube"></a>
                 </div>
             </div>
         </div>
