--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -48,7 +48,7 @@
                         </li>
 
                         <li class="sale-noti">
-                            <a href="/onSale">Sale</a>
+                            <a href="/onSale">Sale <i class="fas fa-fire-alt" color="red"></i></a>
                         </li>
 
                         <li>
