--- a/views/admin/productReport.ejs
+++ b/views/admin/productReport.ejs
@@ -31,14 +31,14 @@
             </div>
         </div>
 
-        <div class="col-lg-2 col-md-3 col-sm-10 mx-3 my-5">
+        <!-- <div class="col-lg-2 col-md-3 col-sm-10 mx-3 my-5">
             <div class="card text-center">
                 <h4 class="card-header bg-info">Still On Stock</h4>
                 <div class="card-body">
                     <h5 class="card-title"><%= onStock %></h5>
                 </div>
             </div>
-        </div>
+        </div> -->
 
         <div class="col-lg-2 col-md-3 col-sm-10 mx-3 my-5">
             <div class="card text-center">
