--- a/views/admin/viewEmployee.ejs
+++ b/views/admin/viewEmployee.ejs
@@ -8,7 +8,7 @@
         
         <!-- Add User form -->
         <div class="container-fluid table-responsive">
-            <table class="table table-light table-striped table-bordered mx-8 my-8">
+            <table id="dataTable" class="table table-light table-striped table-bordered table-hover mx-8 my-8">
                 <thead>
                     <tr>
                         <th class="th-sm" scope="col">Image</th>
