--- a/views/admin/viewTag.ejs
+++ b/views/admin/viewTag.ejs
@@ -57,7 +57,7 @@
     
             <!-- Category View  -->
             <div class="container-fluid table-responsive">
-                <table class="table table-light table-striped table-bordered mx-8 my-8">
+                <table id="dataTable" class="table table-light table-striped table-bordered table-hover mx-8 my-8">
                     <thead>
                         <tr>
                             <th class="th-sm" id="name" scope="col">Tag Name</th>
