--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -4,48 +4,9 @@
 	<title>Wallpaper</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-<!--===============================================================================================-->
-	<link rel="icon" type="image/png" href="/images/icons/favicon.png"/>
-<!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="/vendor/bootstrap/css/bootstrap.min.css">
-<!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="/fonts/font-awesome-4.7.0/css/font-awesome.min.css">
-	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" 
-							integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" 
-							crossorigin="anonymous">
-<!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="/fonts/themify/themify-icons.css">
-	<!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="/fonts/ionicons-2.0.1/css/ionicons.min.css">
-<!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="/fonts/Linearicons-Free-v1.0.0/icon-font.min.css">
-<!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="/fonts/elegant-font/html-css/style.css">
-<!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="/vendor/animate/animate.css">
-<!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="/vendor/css-hamburgers/hamburgers.min.css">
-<!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="/vendor/animsition/css/animsition.min.css">
-<!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="/vendor/select2/select2.min.css">
-<!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="/vendor/daterangepicker/daterangepicker.css">
-<!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="/vendor/slick/slick.css">
-<!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="/vendor/lightbox2/css/lightbox.min.css">
-<!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="/css/Registration-Form-with-Photo.css">
-<!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="/css/util.css">
-	<link rel="stylesheet" type="text/css" href="/css/main.css">
 	
-<!--==============================ADMIN=================================================================-->
-	<link rel="stylesheet" type="text/css" href="/css/Sidebar-Menu-1.css">
-    <link rel="stylesheet" type="text/css" href="/css/Sidebar-Menu.css">
-    <link rel="stylesheet" type="text/css" href="/css/style.css">
-<!--===============================================================================================-->
+	<% include ./partials/css %>
+  
 </head>
 <body class="animsition">
 	
@@ -55,27 +16,8 @@
 	<!-- Back to top button -->
 	<% include ./admin/backToTopBtn %>
 
+	<% include ./partials/scripting %>
 
-<!--===============================================================================================-->
-	<script type="text/javascript" src="/vendor/jquery/jquery-3.2.1.min.js"></script>
-<!--===============================================================================================-->
-	<script type="text/javascript" src="/vendor/animsition/js/animsition.min.js"></script>
-<!--===============================================================================================-->
-	<script type="text/javascript" src="/vendor/bootstrap/js/popper.js"></script>
-	<script type="text/javascript" src="/vendor/bootstrap/js/bootstrap.min.js"></script>
-<!--===============================================================================================-->
-	<script type="text/javascript" src="/vendor/select2/select2.min.js"></script>
-<!--===============================================================================================-->
-	<script type="text/javascript" src="/vendor/slick/slick.min.js"></script>
-	<script type="text/javascript" src="/js/slick-custom.js"></script>
-<!--===============================================================================================-->
-	<script type="text/javascript" src="/vendor/countdowntime/countdowntime.js"></script>
-<!--===============================================================================================-->
-	<script type="text/javascript" src="/vendor/lightbox2/js/lightbox.min.js"></script>
-<!--===============================================================================================-->
-	<script type="text/javascript" src="/vendor/sweetalert/sweetalert.min.js"></script>
-<!--===============================================================================================-->
-	<script type="text/javascript" src="/js/main.js"></script>
-	<script type="text/javascript" src="/js/Sidebar-Menu.js"></script>
+
 </body>
 </html>
