--- a/views/partials/scripting.ejs
+++ b/views/partials/scripting.ejs
@@ -1,5 +1,6 @@
 <!--===============================================================================================-->
-<script type="text/javascript" src="/vendor/jquery/jquery-3.2.1.min.js"></script>
+<!-- <script type="text/javascript" src="/vendor/jquery/jquery-3.2.1.min.js"></script> -->
+	<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 <!--===============================================================================================-->
 	<script type="text/javascript" src="/vendor/animsition/js/animsition.min.js"></script>
 <!--===============================================================================================-->
@@ -22,3 +23,5 @@
 <!--===============================================================================================-->
 	<script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.js"></script>
 <!--===============================================================================================-->
+	<script type="text/javascript" src="/js/bootstrap-tagsinput.js"></script>
+	<!--===============================================================================================-->
