--- a/views/admin/productForm.ejs
+++ b/views/admin/productForm.ejs
@@ -64,7 +64,7 @@
                                 <div class="form-group">
                                     <label class="col-md-auto control-label" for="categories"><b>Categories</b></label>
                                     <div class="col-md-auto">
-                                        <select class="select-chosen text-box" id="categories" name="categories[]" multiple>
+                                        <select class="select-chosen text-box" id="categories" name="categories[]" data-role="tagsinput" multiple>
                                             <option value="category1">Category 1</option>
                                             <option value="category2">Category 2</option>
                                             <option value="category3">Category 3</option>
