--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	
-	<% include ./partials/css %>
+	<% include ./partials/stylesheets %>
   
 </head>
 <body class="animsition">
