--- a/views/partials/stylesheets.ejs
+++ b/views/partials/stylesheets.ejs
@@ -34,7 +34,8 @@
 <!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="/css/util.css">
 	<link rel="stylesheet" type="text/css" href="/css/main.css">
-	
+<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="/css/bootstrap-tagsinput.css">
 <!--==============================ADMIN=================================================================-->
 	<link rel="stylesheet" type="text/css" href="/css/Sidebar-Menu-1.css">
     <link rel="stylesheet" type="text/css" href="/css/Sidebar-Menu.css">
